--- a/Entrega4/Makefile
+++ b/Entrega4/Makefile
@@ -1,41 +1,35 @@
+#pegando as variáveis <-- para referencia
 # $@ --- alvo
 # $< --- 1a dependência
 # $^ --- lista de dependência s/ repetição
 # $+ --- lista de dependência
 # $? --- lista de dependência mais "recentes"
 
-CFLAGS= -Wall -g -O2 -lm
-
-all:	Main
+CFLAGS= -Wall -g  -lm
 
 #gerando executável
-Main:	resultante.o cinematica.o  Main.o xwc.o
-	${CC} -o $@ $^ -lXpm -lX11 ${CFLAGS}
+Main:	resultante.o cinematica.o xwc.o graph.o Main.o
+	${CC} ${CFLAGS} -o $@ $^ -lm -lXpm -lX11
 
 resultante.o:	resultante.c estruturas.h
-	${CC} -c $^ ${CFLAGS}
+	${CC} -c $^ ${CFLAGS} -lm
 
 cinematica.o:	cinematica.c estruturas.h
-	${CC} -c $^ ${CFLAGS}
 
-xwc.o:	xwc.c
+xwc.o: xwc.c 
+	${CC} -c $^ -lXpm -lX11 ${CFLAGS}
+
+graph.o: graph.c estruturas.h
+	${CC} -c $^ -lXpm -lX11 ${CFLAGS}
+
+Main.o:	Main.c
 	${CC} -c $^ -lXpm -lX11
 
-Main.o:	Main.c xwc.h
-	${CC} -c $^ -lXpm -lX11
-
-#limpando a 'bagunça'
-ifndef Main
 clean:	
 	rm *.o
-else
-clean:	
-	rm *.o
-	rm Main
-endif
 
 # sei que já tem o zip e tals, mas colocar um método pra
-#	imprimir é uma prática que eu curto
+#	imprimir é uma prática interessnate
 empacotar:	
 	@mkdir entrega
 	cp  *.c ./entrega
